@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 44;
-# define VERSION_BUILD_NO 44
-char	version_build_date[] = "Wed Sep  7 23:01:56 2011";
+int	version_build_no = 45;
+# define VERSION_BUILD_NO 45
+char	version_build_date[] = "Thu Sep  8 22:58:47 2011";
 
